Util: simplify the IP lookup logic